--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
  
      <!-- Site Metas -->
-    <title>StyleBarber - Bootstrap 4 Responsive HTML5 Template</title>  
+    <title>StyleBarber</title>  
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -327,7 +327,7 @@
 							<a href="#">Faq</a>
 							<a href="#">Contact</a>
 						</p>
-						<p class="footer-company-name">All Rights Reserved. &copy; 2018 <a href="#">StyleBarber</a> Design By : <a href="https://html.design/">html design</a></p>
+						<p class="footer-company-name">All Rights Reserved. &copy; 2025 <a href="#">StyleBarber</a> Design By : <a href="https://netwitx.com/">netwitx.com</a></p>
 					</div>
 				</div>
 			</div><!-- end container -->
